--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "store-angular",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18.18.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
